; ModuleID = '/home/carl/AnghaBench/redis/src/extr_cluster.c_clusterRequestFailoverAuth.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_cluster.c_clusterRequestFailoverAuth.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i64 }
%struct.TYPE_7__ = type { i32, i32* }

@CLUSTERMSG_TYPE_FAILOVER_AUTH_REQUEST = common dso_local global i32 0, align 4
@server = common dso_local global %struct.TYPE_8__ zeroinitializer, align 8
@CLUSTERMSG_FLAG0_FORCEACK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @clusterRequestFailoverAuth() #0 {
  %1 = alloca [1 x %struct.TYPE_7__], align 16
  %2 = alloca %struct.TYPE_7__*, align 8
  %3 = alloca i32, align 4
  %4 = getelementptr inbounds [1 x %struct.TYPE_7__], [1 x %struct.TYPE_7__]* %1, i64 0, i64 0
  store %struct.TYPE_7__* %4, %struct.TYPE_7__** %2, align 8
  %5 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %6 = load i32, i32* @CLUSTERMSG_TYPE_FAILOVER_AUTH_REQUEST, align 4
  %7 = call i32 @clusterBuildMessageHdr(%struct.TYPE_7__* %5, i32 %6)
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @server, i32 0, i32 0), align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %20

12:                                               ; preds = %0
  %13 = load i32, i32* @CLUSTERMSG_FLAG0_FORCEACK, align 4
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %15 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %14, i32 0, i32 1
  %16 = load i32*, i32** %15, align 8
  %17 = getelementptr inbounds i32, i32* %16, i64 0
  %18 = load i32, i32* %17, align 4
  %19 = or i32 %18, %13
  store i32 %19, i32* %17, align 4
  br label %20

20:                                               ; preds = %12, %0
  store i32 12, i32* %3, align 4
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @htonl(i32 %21)
  %23 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %24 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %23, i32 0, i32 0
  store i32 %22, i32* %24, align 8
  %25 = getelementptr inbounds [1 x %struct.TYPE_7__], [1 x %struct.TYPE_7__]* %1, i64 0, i64 0
  %26 = load i32, i32* %3, align 4
  %27 = call i32 @clusterBroadcastMessage(%struct.TYPE_7__* %25, i32 %26)
  ret void
}

declare dso_local i32 @clusterBuildMessageHdr(%struct.TYPE_7__*, i32) #1

declare dso_local i32 @htonl(i32) #1

declare dso_local i32 @clusterBroadcastMessage(%struct.TYPE_7__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
